<resources>
    <string name="app_name">Total Focus</string>


    <!--Activity Titles-->
    <string name="label_Login">Iniciar Sesion</string>
    <string name="label_Register">Registrarse</string>

    <!--Tabs Titles-->
    <string name="tab_text_1">Cursos</string>
    <string name="tab_text_2">Notas</string>
    <string name="tab_text_3">Tarjetas</string>
    <string name="tab_text_4">Horario</string>

    <!--Login and Register Forms-->
    <string name="title_login">Iniciar sesión con tu cuenta</string>
    <string name="title_register">Crear una cuenta nueva</string>

    <string name="label_email">Email</string>
    <string name="label_name">Nombre</string>
    <string name="label_last_name">Apellido</string>
    <string name="label_register">Registrase</string>
    <string name="label_password">Contraseña</string>
    <string name="label_login">Iniciar sesion</string>
    <string name="label_check_password">Confirmar Contraseña</string>
    <string name="img_title_login">Bienvenido Inicia session</string>
    <string name="label_curse">Nueva Clase</string>
    <string name="label_note">Nueva Nota</string>
    <string name="label_postit">Nueva Tarjeta</string>
    <string name="label_timetable">Nuevo Horario</string>
    <string name="hint_title_course">Nombre de la clase</string>
    <string name="label_load_image">subir imagen</string>
    <string name="label_save">Guargar</string>
    <string name="label_title_note">Titulo de Nota</string>
    <string name="label_title_course">Nombre de la Clase</string>
    <string name="label_select_category">selecione un categoria</string>
    <string name="label_content_note">Contenido de la nota ...</string>
    <string name="label_select_course">Selecione una clase</string>
    <string name="label_title_postit">Titulo de la Tarjeta</string>
    <string name="label_content_postit">Contenido de la Tarjeta...</string>
    <string name="label_delete">Eliminar</string>
    <string name="label_edit">Editar</string>
    <string name="label_title_timetable">Titulo del horario</string>
    <string name="label_hour_timetable">Hora de Inicio</string>
    <string name="label_days_timetable">Dias de la semana</string>
    <string name="initial_monday">L</string>
    <string name="initial_tuesday">M</string>
    <string name="initial_wednesday">M</string>
    <string name="initial_thursday">J</string>
    <string name="initial_friday">V</string>
    <string name="initial_saturday">S</string>
    <string name="initial_sunday">D</string>

</resources>